# codelab-android-wavemaker2

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Definitions.h  SoundRecording.cpp  SoundRecording.h  SoundRecordingUtilities.cpp  native-lib.cpp
app/src/main/java/com/example/donturner/wavemaker2/: MainActivity.java
app/src/main/java/com/example/wavemaker2/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
base/: CMakeLists.txt  build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/cpp/: SoundRecording.cpp  SoundRecordingUtilities.h
base/src/main/java/com/example/wavemaker2/: MainActivity.java
base/src/main/res/layout/: activity_main.xml
final/: build.gradle
final/src/main/cpp/: AudioEngine.h  SoundRecording.cpp  jni-bridge.cpp
final/src/main/java/com/example/wavemaker2/: MainActivity.java
final/src/main/res/layout/: activity_main.xml
final/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
test/: CMakeLists.txt  run_tests.sh  sound_recording_unittest.cpp
